Rename CSS class mr- and ml- to ms- and me-
This is part of upgrading to bootstrap 5, as they renamed the class.

--- a/src/app/components/articles/marker/marker.component.html
+++ b/src/app/components/articles/marker/marker.component.html
@@ -40,7 +40,7 @@
                 <span *ngIf="articleData.icon">{{articleData.icon}}</span> 
                 <span *ngIf="!articleData.icon">
                     {{articleData.type_details.icon}}
-                    <span class="text-muted ml-3"> (from marker type) </span> 
+                    <span class="text-muted ms-3"> (from marker type) </span> 
                 </span>     
             </span>
 
@@ -57,7 +57,7 @@
                 </ng-container> 
                 <ng-container *ngIf="!articleData.color">
                     {{articleData.type_details.color}}                    
-                    <span class="text-muted ml-3"> (from marker type) </span> 
+                    <span class="text-muted ms-3"> (from marker type) </span> 
                 </ng-container> 
             </span>
 
