--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -12,13 +12,13 @@
 <ng-template #campaignLink>
     <a class="btn btn-primary" [href]="!! campaign ? campaignHomeUrl : campaignOverviewUrl">
         Retry
-        <span class="ml-2 fas fa-redo-alt"></span>
+        <span class="ms-2 fas fa-redo-alt"></span>
     </a> 
 </ng-template>
 
 <ng-template #loginLink>
     <a class="btn btn-primary" [href]="loginUrl">
         Log in again
-        <span class="ml-2 fas fa-redo-alt"></span>
+        <span class="ms-2 fas fa-redo-alt"></span>
     </a> 
 </ng-template>
