--- a/src/app/components/utility/image-carousel/image-carousel.component.html
+++ b/src/app/components/utility/image-carousel/image-carousel.component.html
@@ -130,7 +130,7 @@
 
     <div class="text-center mt-3">
       Do you really want to delete this image?
-      <div class="btn btn-dark mr-3" (click)="onCancel()">No</div>
+      <div class="btn btn-dark me-3" (click)="onCancel()">No</div>
       <div class="btn btn-danger" (click)="deleteCurrentMainImage()">Yes</div>
     </div>
   </div>
