--- a/src/app/components/utility/timestamp-list/timestamp-list.component.html
+++ b/src/app/components/utility/timestamp-list/timestamp-list.component.html
@@ -3,7 +3,7 @@
     <!-- Timestamp Create Form -->
     <ng-container *ngIf="timestampCreateState">
         <form [formGroup]="timestampForm" 
-        class="row mt-1 mb-4 ml-auto mw-85 animate__animated animate__flipInX" 
+        class="row mt-1 mb-4 ms-auto mw-85 animate__animated animate__flipInX" 
         (submit)="createTimestamp()">
             <formly-form class="d-flex col-lg-10 col-10 px-0" 
             [form]="timestampForm" 
