--- a/src/app/components/articles/admin/admin.component.html
+++ b/src/app/components/articles/admin/admin.component.html
@@ -143,7 +143,7 @@
                     <span class="fas fa-dragon"></span>
                     Campaigns
                     <ng-container *ngIf="isWaitingForCampaignCreation">
-                        <app-spinner class="ml-3"></app-spinner>
+                        <app-spinner class="ms-3"></app-spinner>
                     </ng-container>
                 </h3>
 
@@ -171,7 +171,7 @@
                     <ng-container *ngFor="let campaign of campaigns">
                         <div class="row mb-4">
                             <div class="col-sm-3">
-                                <img [src]="campaign.icon" alt="Icon of campaign {{campaign.name}}" class="mr-3 campaign-icon">
+                                <img [src]="campaign.icon" alt="Icon of campaign {{campaign.name}}" class="me-3 campaign-icon">
                                 <strong>  {{ campaign.name }} </strong>
                             </div>
                             <div class="col-sm-3">Admins: {{campaign.admins.length}}</div>
