--- a/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
+++ b/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
@@ -44,7 +44,7 @@
             <div class="col-lg-2 col-md-4 col-5">
                 <ng-container *ngIf="articleData.adjacent_diaryentries.next_diaryentry">
                     <a [routerLink]="nextDiaryentryUrl" class="btn btn-secondary w-100"> 
-                        <i class="fa fa-arrow-left mr-1"></i>
+                        <i class="fa fa-arrow-left me-1"></i>
                         Next
                     </a>
                 </ng-container>
@@ -56,7 +56,7 @@
                 <ng-container *ngIf="articleData.adjacent_diaryentries.prior_diaryentry">
                     <a [routerLink]="priorDiaryentryUrl" class="btn btn-secondary w-100"> 
                         Back
-                        <i class="fa fa-arrow-right ml-1"></i>
+                        <i class="fa fa-arrow-right ms-1"></i>
                     </a>
                 </ng-container>
             </div>
@@ -75,7 +75,7 @@
             <div class="col-lg-2 col-md-4 col-5">
                 <ng-container *ngIf="articleData.adjacent_diaryentries.next_diaryentry">
                     <a [routerLink]="nextDiaryentryUrl" class="btn btn-secondary w-100"> 
-                        <i class="fa fa-arrow-left mr-1"></i>
+                        <i class="fa fa-arrow-left me-1"></i>
                         Next
                     </a>
                 </ng-container>
@@ -86,7 +86,7 @@
                 <ng-container *ngIf="articleData.adjacent_diaryentries.prior_diaryentry">
                     <a [routerLink]="priorDiaryentryUrl" class="btn btn-secondary w-100"> 
                         Prior
-                        <i class="fa fa-arrow-right ml-1"></i>
+                        <i class="fa fa-arrow-right ms-1"></i>
                     </a>
                 </ng-container>
             </div>
