--- a/src/app/components/articles/location-article-map-create/location-article-map-create.component.html
+++ b/src/app/components/articles/location-article-map-create/location-article-map-create.component.html
@@ -30,7 +30,7 @@
             </div>
             
             <!-- Form Buttons -->
-            <div class="btn btn-dark mr-3" (click)="onCancel()">Cancel</div>
+            <div class="btn btn-dark me-3" (click)="onCancel()">Cancel</div>
             <button type="submit" class="btn btn-secondary">Submit</button>
         </form>
     </article>
