--- a/src/app/components/utility/display-form-container/display-form-container.component.html
+++ b/src/app/components/utility/display-form-container/display-form-container.component.html
@@ -5,7 +5,7 @@
                 <input 
                 type="checkbox" 
                 disabled 
-                [class]="'custom-control mr-2 ' + field.className"
+                [class]="'custom-control me-2 ' + field.className"
                 [checked]="modelCopy[field.key]">
             </ng-container>
 
@@ -23,7 +23,7 @@
         </ng-container>
 
         <ng-container *ngIf="field.type==='tinymce'">
-            <div [class]="'custom-control mr-2 ' + field.className" [innerHTML]="modelCopy[field.key]"></div>
+            <div [class]="'custom-control me-2 ' + field.className" [innerHTML]="modelCopy[field.key]"></div>
         </ng-container>
 
     </div>
