--- a/src/app/components/utility/recently-updated-articles-list/recently-updated-articles-list.component.html
+++ b/src/app/components/utility/recently-updated-articles-list/recently-updated-articles-list.component.html
@@ -3,7 +3,7 @@
     <h3 class="row justify-content-center align-items-center">
         <span class="">Recent Updates</span>
         <ng-container *ngIf="!articles">
-            <app-spinner class="ml-3"></app-spinner>
+            <app-spinner class="ms-3"></app-spinner>
         </ng-container>
     </h3>
 
