--- a/src/app/components/utility/session-delete-modal/session-delete-modal.component.html
+++ b/src/app/components/utility/session-delete-modal/session-delete-modal.component.html
@@ -11,7 +11,7 @@
     <div class="modal-body">
         <div class="mb-1">        
             <div class="mb-2">Delete This Session?</div> 
-            <div class="btn btn-secondary mr-3" (click)="modal.close()">No</div>
+            <div class="btn btn-secondary me-3" (click)="modal.close()">No</div>
             <div class="btn btn-danger" (click)="onSubmit(modal)">Yes</div>
         </div>
     </div>
