--- a/src/app/components/utility/session-update-wrapper/session-update-wrapper.component.html
+++ b/src/app/components/utility/session-update-wrapper/session-update-wrapper.component.html
@@ -15,7 +15,7 @@
         <ng-container #fieldComponent></ng-container>
     </div>
 
-    <div class="ml-2 align-self-end d-flex">
+    <div class="ms-2 align-self-end d-flex">
         <!-- Create Modal -->
         <app-session-update-modal 
         [session_pk_subject]="null" 
