--- a/src/app/components/utility/sidebar/sidebar.component.html
+++ b/src/app/components/utility/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
                 <a class="pl-0" [routerLink]="homeUrl">
                     <h3 class="d-flex align-items-center justify-content-center" id="brand"> 
                         <img class="campaign-icon" [src]="campaignIcon$ | async" alt="..." />
-                        <span class="ml-2 on-hover-show">{{currentCampaign.name }}</span>
+                        <span class="ms-2 on-hover-show">{{currentCampaign.name }}</span>
                     </h3>
                 </a>
             </li>
@@ -77,7 +77,7 @@
             <a class="pl-0" [routerLink]="campaignOverviewUrl">
                 <h3 class="d-flex align-items-center justify-content-center" id="brand"> 
                     <span class="fas fa-chevron-left"></span>
-                    <span class="ml-2 on-hover-show"> To campaigns</span>
+                    <span class="ms-2 on-hover-show"> To campaigns</span>
                 </h3>
             </a>
         </li>
