Go from form-group to mb-3 as bootstrap 5 removed that class

--- a/src/app/components/utility/formly-datepicker/formly-datepicker.component.html
+++ b/src/app/components/utility/formly-datepicker/formly-datepicker.component.html
@@ -1,4 +1,4 @@
-<div class="form-group" [ngClass]="{'d-none': to.hidden}">
+<div class="mb-3" [ngClass]="{'d-none': to.hidden}">
     <!-- Heading --> 
     <!-- to = TemplateOptions -->
     <label for="datepicker">
