--- a/src/app/components/utility/formly-select-disable/formly-select-disable.component.html
+++ b/src/app/components/utility/formly-select-disable/formly-select-disable.component.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div class="mb-3">
 
     <label for="formly_disable_select_{{to.label}}">
         <strong placement="top"
