--- a/src/app/components/utility/session-update-modal/session-update-modal.component.html
+++ b/src/app/components/utility/session-update-modal/session-update-modal.component.html
@@ -28,7 +28,7 @@
 
 </ng-template>
 
-<div class="form-group mx-2">
+<div class="mb-3 mx-2">
     <!-- Button to show in Create State -->
     <ng-container  *ngIf="formState === constants.createState">
         <div [class]="'btn btn-outline-info fa ' + icon" 
