--- a/src/app/components/utility/display-form-container/display-form-container.component.html
+++ b/src/app/components/utility/display-form-container/display-form-container.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngFor="let field of formlyFields">
-    <div class="form-group">
+    <div class="mb-3">
         <div class="d-flex align-items-center">
             <ng-container *ngIf="field.type==='checkbox'">
                 <input 
