--- a/src/app/components/utility/file-upload/file-upload.component.html
+++ b/src/app/components/utility/file-upload/file-upload.component.html
@@ -1,3 +1,3 @@
-<div class="form-group"> 
+<div class="mb-3"> 
     <input type="file" [formControl]="formControl" [formlyAttributes]="field">
 </div>
