--- a/src/app/components/utility/formly/formly.component.html
+++ b/src/app/components/utility/formly/formly.component.html
@@ -1,4 +1,4 @@
-<div class="form-group mb-4">
+<div class="mb-4">
     <label [for]="to.name">{{to.label}}</label>
     <editor 
     [init]="constants.tinyMCESettings"
