--- a/src/app/components/utility/session-delete-modal/session-delete-modal.component.html
+++ b/src/app/components/utility/session-delete-modal/session-delete-modal.component.html
@@ -18,7 +18,7 @@
 
 </ng-template>
 
-<div class="form-group mx-2">
+<div class="mb-3 mx-2">
     <div 
     class="btn btn-outline-danger fa {{icon}}" 
     title="Delete selected Session" 
