Rename CSS class
This is part of upgrading to bootstrap 5, as they renamed and removed various classes.

--- a/src/app/components/utility/session-delete-modal/session-delete-modal.component.html
+++ b/src/app/components/utility/session-delete-modal/session-delete-modal.component.html
@@ -2,7 +2,7 @@
     <!-- Header -->
     <div class="modal-header">
         <h4 class="modal-title" id="modal-basic-title"> Delete Session </h4>
-        <div class="close" aria-label="Close" (click)="modal.dismiss()">
+        <div class="btn-close" aria-label="Close" (click)="modal.dismiss()">
             <span aria-hidden="true" class="fa fa-times pointer"></span>
         </div>
     </div>
