--- a/src/app/components/utility/session-update-modal/session-update-modal.component.html
+++ b/src/app/components/utility/session-update-modal/session-update-modal.component.html
@@ -9,7 +9,7 @@
                 Update {{ model.name }} 
             </ng-container>
         </h4>
-        <div class="close" aria-label="Close" (click)="modal.dismiss()">
+        <div class="btn-close" aria-label="Close" (click)="modal.dismiss()">
             <span aria-hidden="true" class="fa fa-times pointer"></span>
         </div>
     </div>
