--- a/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
+++ b/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
@@ -63,7 +63,7 @@
     <div class="row">
       <div
         [ngClass]="{
-          'col-sm-11 pr-2': !diaryEntryView,
+          'col-sm-11 pe-2': !diaryEntryView,
           'col-12': diaryEntryView
         }"
       >
